# tessa

./: .gitignore  BOOST_LICENSE.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  Makefile.am  Notes.md  README.md  configure.ac  gengenerator.c
contrib/: pivx-qt.pro
contrib/debian/: control  pivx-qt.desktop
contrib/devtools/: README.md
contrib/init/: pivxd.conf  pivxd.init  pivxd.openrc  pivxd.service
contrib/macdeploy/: custom_dsstore.py  macdeployqtplus
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tessa.doxygen.in  tor.md  translation_process.md  unit-tests.md  zmq.md
qa/rpc-tests/: util.py  util.sh
src/: CMakeLists.txt  Makefile.am  Makefile.qt.include  account.h  accumulatorcheckpoints.cpp  accumulatorcheckpoints.h  accumulatormap.cpp  accumulatormap.h  accumulators.cpp  accumulators.h  addressbookdata.h  addrman.cpp  addrman.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bignum.h  bip38.cpp  bip38.h  block.cpp  blockaverage.h  blockdisk.h  blockfileinfo.h  blockmap.h  blocksignature.cpp  blocksignature.h  blockundo.cpp  blockundo.h  bloom.cpp  bloom.h  boost_blockaverage.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  (+205 more)
src/bch32/: CMakeLists.txt  bch32.cpp  bch32.h  bch_addr.cpp  bch_addr.h  tests.cpp
src/bech32/: CMakeLists.txt  bech32.cpp  bech32.h  bech_addr.cpp  bech_addr.h  tests.cpp
src/bls/: CMakeLists.txt  aggregationinfo.cpp  aggregationinfo.h  baseBLS.cpp  baseBLS.h  blocksignature.cpp  blocksignature.h  bls.cpp  bls.h  bls.hpp  bls_key_tests.cpp  blsutil.h  chaincode.cpp  chaincode.h  chaincode.hpp  ecdsa.cpp  ecdsa.h  extendedprivatekey.cpp  extendedprivatekey.h  extendedprivatekey.hpp  extendedpublickey.cpp  extendedpublickey.h  extendedpublickey.hpp  extkey.cpp  extkey.h  key.cpp  key.h  privatekey.hpp  privkey.cpp  privkey.h  pubkey.cpp  pubkey.h  signature.cpp  signature.h  test-bench.cpp  test-utils.h  test.cpp  util.hpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  strnlen.cpp
src/config/: club-config.h.in
src/consensus/: validation.h
src/crypto/: chacha20.cpp  common.h
src/ecdsa/: CMakeLists.txt  baseBLS.h  ecdsa.cpp  ecdsa.h  extkey.cpp  extkey.h  key.cpp  key.h  key_tests.cpp  privatekey.hpp  privkey.cpp  privkey.h  pubkey.cpp  pubkey.h  test-utils.h  util.hpp
src/ed25519/: CMakeLists.txt  key.h
src/filesystem/: filesystem.hpp
src/json/: CMakeLists.txt  hash_map.h  json.hpp  json_file.cpp  json_file.h  sporkdata.cpp  sporkdata.h
src/liblmdb/: CMakeLists.txt
src/libzerocoin/: Accumulator.cpp  Accumulator.h  AccumulatorAndProofParams.h  AccumulatorProofOfKnowledge.cpp  AccumulatorProofOfKnowledge.h  AccumulatorWitness.cpp  AccumulatorWitness.h  CMakeLists.txt  Coin.cpp  Coin.h  CoinSpend.cpp  CoinSpend.h  Commit.h  Commitment.cpp  Commitment.h  CommitmentProofOfKnowledge.cpp  CommitmentProofOfKnowledge.h  Denominations.cpp  Denominations.h  IntegerGroupParams.h  IntegerMod.h  ModulusType.h  ParamGeneration.cpp  ParamGeneration.h  Params.cpp  Params.h  PrivateCoin.cpp  PrivateCoin.h  PublicCoin.h  SerialNumberGroupParams.h  SerialNumberSignatureOfKnowledge.cpp  SerialNumberSignatureOfKnowledge.h  SpendType.h  ZerocoinDefines.h  ZerocoinParams.cpp  ZerocoinParams.h  bignum.h  key.cpp  paramgen.cpp  privkey.h  (+1 more)
src/mnemonic/: dictionary.cpp  dictionary.h
src/mpark/: variant.hpp
src/primitives/: block.cpp  block.h  deterministicmint.cpp  deterministicmint.h  transaction.cpp  transaction.h  zerocoin.cpp  zerocoin.h
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bip38tooldialog.cpp  bip38tooldialog.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  club.cpp  club.qrc  club_locale.qrc  clubstrings.cpp  coin.cpp  coin_locale.qrc  coinaddressvalidator.cpp  coinamountfield.cpp  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coingui.cpp  coingui.h  coinunits.cpp  coinunits.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  (+83 more)
src/relic/: CMakeLists.txt
src/rpc/: blockchain.cpp  client.cpp  client.h  dump.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcprotocol.cpp  rpcprotocol.h  rpcrawtransaction.cpp  rpcserver.cpp  rpcserver.h  rpcwallet.cpp  server.cpp  server.h  wallet.cpp
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: CMakeLists.txt
src/signals-cpp/: config.hpp  connection.hpp  connections.hpp  signal.hpp
src/spork/: spork.cpp  spork.h  sporkdb.cpp  sporkdb.h
src/support/: lockedpool.cpp
src/test/: Checkpoints_tests.cpp  accounting_tests.cpp  arith_uint256_tests.cpp  base58_tests.cpp  benchmark_zerocoin.cpp  bloom_tests.cpp  getarg_tests.cpp  key_tests.cpp  libzerocoin_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  scheduler_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_club.cpp  test_pivx.cpp  test_zerocoin.cpp  torcontrol_tests.cpp  transaction_tests.cpp  tutorial_zerocoin.cpp  univalue_tests.cpp  util_tests.cpp  zerocoin_denomination_tests.cpp  zerocoin_implementation_tests.cpp  zerocoin_transactions_tests.cpp
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  wallet.h  (+11 more)
(+65 files in other folders)
